set the description

--- a/src/input.css
+++ b/src/input.css
@@ -1,11 +1,26 @@
 @import "tailwindcss";
 
 @theme {
-   /*  */
-   --radius-weather: 5rem;
-   /*  */
-   --color-weather-start: #4cc9ff;
-   --color-weather-mid: #2e9bff;
-   --color-weather-end: #0088ff;
-   /*  */
+    /*  */
+    --radius-weather: 5rem;
+    /*  */
+    --color-weather-start: #4cc9ff;
+    --color-weather-mid: #2e9bff;
+    --color-weather-end: #0088ff;
+    /*  */
+    --animate-Rotate: Rotate 2.1s infinite linear;
+    @keyframes Rotate {
+        0% {
+            transform: translateY(3px);
+        }
+
+        50% {
+            transform: translateY(-3px);
+        }
+
+        100% {
+            transform: translateY(3px);
+        }
+    }
+    /*  */
 }
