fix animation bug

--- a/src/input.css
+++ b/src/input.css
@@ -12,8 +12,8 @@
     --color-weather-mid: #2e9bff;
     --color-weather-end: #0088ff;
     /*  */
-    --animate-Rotate: Rotate 2s infinite linear;
-    @keyframes Rotate {
+    --animate-WeatherSnow: WeatherSnow 2s infinite linear;
+    @keyframes WeatherSnow {
         0% {
             transform: translateY(4px);
         }
